--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/joi": "^17.2.3",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/parser": "^6.3.0",
     "apollo-server-express": "^3.12.0",
     "express": "^4.18.2",
@@ -19,7 +20,9 @@
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "pg": "^8.11.2",
+    "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
+    "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@types/express-graphql": "^0.9.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.4.8",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^37.0.0",
